--- a/src/app/features/gis/components/setups/components/schedule/liability/liability.component.html
+++ b/src/app/features/gis/components/setups/components/schedule/liability/liability.component.html
@@ -1,4 +1,10 @@
 <div class="base-content-section setups">
+
+  <div class="me-4">
+    <app-dynamic-breadcrumb [breadCrumbItems]="breadCrumbItems">
+    </app-dynamic-breadcrumb>
+  </div>
+
   <div class="row">
     <div class="col-sm-3 left">
       <div class="card">
@@ -69,15 +75,15 @@
               <i class="fa-solid fa-plus"></i>Add
             </button>
             <button class="btn btn-link text-primary">
-              <i class="fa-solid fa-pencil"></i>Edit
+              <!--<i class="fa-solid fa-pencil"></i>-->Edit
             </button>
             <button class="btn btn-link text-primary">
-              <i class="fa-solid fa-minus"></i>Delete
+              <!--<i class="fa-solid fa-minus"></i>-->Delete
             </button>
           </div>
           <div class="col-sm-2 offset-sm-2 text-end">
             <button class="btn btn-link text-primary">
-              <i class="fa-solid fa-chart-area"></i>Reports
+              <!--<i class="fa-solid fa-chart-area"></i>-->Reports
             </button>
           </div>
         </div>
